infra/k8s/chat-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-api-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-api
  template:
    metadata:
      labels:
        app: chat-api
    spec:
      containers:
        - name: chat-api
          image: atetheone/chat-api:latest
---
apiVersion: v1
kind: Service
metadata:
  name: chat-api-srv
spec:
  selector:
    app: chat-api
  ports:
    - name: chat-api
      protocol: TCP
      port: 3100
      targetPort: 3100
