infra/k8s/event-broker-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-broker-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-broker
  template:
    metadata:
      labels:
        app: event-broker
    spec:
      containers:
        - name: event-broker
          image: atetheone/event-broker:latest
---
apiVersion: v1
kind: Service
metadata:
  name: event-broker-srv
spec:
  selector:
    app: event-broker
  ports:
    - name: event-broker
      protocol: TCP
      port: 3900
      targetPort: 3900
